fix overflow and scrolling for too many elements in chat

--- a/resources/public/css/components.css
+++ b/resources/public/css/components.css
@@ -613,7 +613,6 @@ and (orientation: landscape) {
 #overlay > #phone, #chat > #phone {
     display: flex;
     flex-direction: column;
-    gap: var(--d-3);
     background-color: var(--blue-primary);
     border-radius: var(--d-2);
     border: 12px solid var(--dark-blue);
@@ -683,6 +682,7 @@ and (orientation: landscape) {
     display: flex;
     flex-direction: column;
     flex: 1;
+    max-height: 100%;
 }
 
 #chat > #phone > #chat-window > #chat-messages {
